# french-quiz-telegram-bot

./: .dockerignore  README.md  config.py  docker-compose.yml  pyproject.toml
backend/: Dockerfile  app.py  config.py  schemas.py
backend/data/nationalies/: questions.json
backend/data/phrases/: go_to_college.json
backend/modules/: __init__.py
backend/modules/nationalities/: __init__.py  router.py
backend/scripts/: generate_audios_from_json.py  generate_audios_from_phrases.py  inspect_api.py
backend/src/utils/: __init__.py  tts.py
bot/: Dockerfile  aiogram_bot.py  server.py  states.py
bot/handlers/: quiz.py  start.py
docs/: user_flow.puml
tests/: test_quiz_api.py
